<resources>
    <string name="app_name">فروشگاه آنلاین</string>
    <string name="home">خانه</string>
    <string name="categories">دسته بندی ها</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="see_all">مشاهده همه</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="search_in_all">جست و جو در همه کالاها</string>
    <string name="connection_error">خطا در برقراری ارتباط</string>
    <string name="retry_message">تلاش مجدد</string>
    <string name="empty_cart_message">سبد خرید شما خالی است.</string>
    <string name="login_message">ورود یا ثبت نام</string>
    <string name="login_description_message">برای خرید کالا ها و امکانات بیشتر لطفا وارد شوید.</string>
    <string name="cart_summary">خلاصه سبد</string>
    <string name="total_cost_of_cart">جمع سبد خرید</string>
    <string name="cart_discount">سود شما از این خرید</string>
    <string name="continue_buying">ادامه فرایند خرید</string>
    <string name="required_message">الزامی</string>
    <string name="login_condition">با ورود یا ثبت نام در دیجیکالا شما شرایط و قوانین استفاده از سرویس های سایت دیجیکالا و قوانین حریم خصوصی آن را میپذیرم.</string>
    <string name="change_to_sign_in">اکانت ندارید؟</string>
    <string name="change_to_log_in">اکانت دارید؟</string>
    <string name="send_to">ارسال به</string>
    <string name="change_or_edit_address">تغییر یا ویرایش آدرس</string>
    <string name="add_address">اضافه کردن آدرس</string>
    <string name="sending_info">شیوه و زمان ارسال</string>
    <string name="send_cost">هزینه ارسال</string>
    <string name="regular_send">ارسال عادی</string>
    <string name="discount_card">کارت تخفیف</string>
    <string name="add_discount_card">افزودن کارت هدیه</string>
    <string name="pay_info">جزئیات پرداخت</string>
    <string name="total_cost">قابل پرداخت</string>
</resources>
