<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fragment_cart_lottie"
        android:layout_width="@dimen/lottie_size"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/three_dots_loading" />

    <include
        android:id="@+id/fragment_cart_login"
        layout="@layout/login_item" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/fragment_cart_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragment_cart_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/light_gray" />

                    <LinearLayout
                        android:id="@+id/fragment_cart_cost_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingTop="30dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="50dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/fragment_cart_count"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:text="3 کالا" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/cart_summary"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20sp"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="@dimen/simple_item_icon_size"
                                android:layout_height="@dimen/simple_item_icon_size"
                                android:src="@drawable/toman_icon" />

                            <TextView
                                android:id="@+id/fragment_cart_cost"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:gravity="left"
                                android:text="388,000,000"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/total_cost_of_cart"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <!--                        <LinearLayout
                                                    android:layout_marginTop="5sp"
                                                    android:gravity="center_vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content">

                                                    <ImageView
                                                        android:layout_width="@dimen/simple_item_icon_size"
                                                        android:layout_height="@dimen/simple_item_icon_size"
                                                        android:src="@drawable/toman_icon"/>

                                                    <TextView
                                                        android:layout_marginStart="5dp"
                                                        android:id="@+id/fragment_cart_discount"
                                                        android:layout_width="0dp"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1"
                                                        android:textColor="@color/black"
                                                        android:gravity="left"
                                                        android:text="388,000" />

                                                    <TextView
                                                        android:layout_width="0dp"
                                                        android:layout_height="wrap_content"
                                                        android:layout_weight="1"
                                                        android:text="@string/cart_discount" />

                                                </LinearLayout>-->

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp"
                android:paddingStart="20sp"
                android:paddingEnd="20sp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_cart_continue_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/discount_red"
                    android:padding="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/continue_buying"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/total_cost_of_cart" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="@dimen/simple_item_icon_size"
                            android:layout_height="@dimen/simple_item_icon_size"
                            android:src="@drawable/toman_icon" />

                        <TextView
                            android:id="@+id/fragment_cart_cost_bottom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="388,000,000"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_cart_empty_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_empty_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_cart_message"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>